completed whole hero section

--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Zomato clone</title>
-    <link rel="stylesheet" href="/style.css"/>
+    <link rel="stylesheet" href="style.css"/>
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.1.1/css/all.min.css" 
     integrity="sha512-KfkfwYDsLkIlwQp6LFnl8zNdLGxu9YAA1QvwINks4PhcElQSvqcyVLLD9aMhXd13uQjoXtEKNosOWaZqXgel0g==" crossorigin="anonymous" 
     referrerpolicy="no-referrer" />
@@ -30,6 +30,21 @@
                 </div>
             </nav>
         </header>
+        <div class="hero__section_container">
+            <img 
+                class="hero__section_logo" 
+                src="images/heroSectionLogo.png" 
+                alt="zomato logo"
+            />
+            <h1 class="hero__section_title">
+                Discover the best food & drinks in Mathura
+            </h1>
+            <div class="hero__section_input_container">
+                <i class="fa-solid fa-location-dot"></i>
+                <input class="input__section_location" type="text" placeholder="Mathura"/>
+                <input class="input__section_search" type="text" placeholder="Search for restaurant, cuisne or a dish"/>
+            </div>
+        </div>
     </section>
 </body>
 </html>
