--- a/index.html
+++ b/index.html
@@ -46,5 +46,64 @@
             </div>
         </div>
     </section>
+    <section class="container we__offer">
+            <div class="card">
+                <img src="images/item1.png" alt="">
+                <h2>Order online</h2>
+                <p>Stay home and order to your doorstep</p>
+            </div>
+            <div class="card">
+                <img src="images/item2.png" alt="">
+                <h2>Dining</h2>
+                <p>View the city's favourite dining venues</p>
+            </div>
+            <div class="card">
+                <img src="images/item3.png" alt="">
+                <h2>Nightlife and Clubes</h2>
+                <p>Explore the city's Nightlife outlets</p>
+            </div>
+    </section>
+    <section class="container collections">
+        <h1>Collections</h1>
+        <div class="sub__heading_container">
+            <span>
+                Explore curated lists of top restaurants, cafes, pubs, and bars in
+                Mathura, based on trends
+            </span>
+            <span>
+                All collections in Mathura
+            </span>
+        </div>
+        <div class="collections_card_container">
+            <div class="card card1">
+                <div class="overlay"></div>
+                <div class="content">
+                    <h4>Cricket screening</h4>
+                    <span>60,place</span>
+                </div>
+            </div>    
+            <div class="card card2">
+                <div class="overlay"></div>
+                <div class="content">
+                    <h4>Ramadan Special</h4>
+                    <span>17,place</span>
+                </div>
+            </div>  
+            <div class="card card3">
+                <div class="overlay"></div>
+                <div class="content">
+                    <h4>newly Opened</h4>
+                    <span>28,place</span>
+                </div>
+            </div>  
+            <div class="card card4">
+                <div class="overlay"></div>
+                <div class="content">
+                    <h4>Trending This Week</h4>
+                    <span>84,place</span>
+                </div>
+            </div>  
+        </div>
+    </section>
 </body>
 </html>
