completed get the app and footer section

--- a/index.html
+++ b/index.html
@@ -105,5 +105,197 @@
             </div>  
         </div>
     </section>
+    <section class="container localities">
+        <h2>Popular localities in and around Mathura</h2>
+        <div class="localities__container">
+            <div class="localities__places">
+                <div class="localities__places_content">
+                    <h4>Mandi Ramdas</h4>
+                    <p>234 places</p>
+                </div>
+                <div class="localities__places_arrow">
+                    >
+                </div>
+            </div>
+            <div class="localities__places">
+                <div class="localities__places_content">
+                    <h4>Mandi Ramdas</h4>
+                    <p>234 places</p>
+                </div>
+                <div class="localities__places_arrow">
+                    >
+                </div>
+            </div>
+            <div class="localities__places">
+                <div class="localities__places_content">
+                    <h4>Mandi Ramdas</h4>
+                    <p>234 places</p>
+                </div>
+                <div class="localities__places_arrow">
+                    >
+                </div>
+            </div>
+            <div class="localities__places">
+                <div class="localities__places_content">
+                    <h4>Mandi Ramdas</h4>
+                    <p>234 places</p>
+                </div>
+                <div class="localities__places_arrow">
+                    >
+                </div>
+            </div>
+            <div class="localities__places">
+                <div class="localities__places_content">
+                    <h4>Mandi Ramdas</h4>
+                    <p>234 places</p>
+                </div>
+                <div class="localities__places_arrow">
+                    >
+                </div>
+            </div>
+            <div class="localities__places">
+                <div class="localities__places_content">
+                    <h4>Mandi Ramdas</h4>
+                    <p>234 places</p>
+                </div>
+                <div class="localities__places_arrow">
+                    >
+                </div>
+            </div>
+            <div class="localities__places">
+                <div class="localities__places_content">
+                    <h4>Mandi Ramdas</h4>
+                    <p>234 places</p>
+                </div>
+                <div class="localities__places_arrow">
+                    >
+                </div>
+            </div>
+            <div class="localities__places">
+                <div class="localities__places_content">
+                    <h4>Mandi Ramdas</h4>
+                    <p>234 places</p>
+                </div>
+                <div class="localities__places_arrow">
+                    >
+                </div>
+            </div>
+            <div class="localities__places ">
+                <div class="localities__places_content">
+                    <h4>See more</h4>
+                </div>
+                <div class="localities__places_arrow">
+                    >
+                </div>
+            </div>
+            
+        </div>
+    </section>
+    <section>
+        <div class="container get__the_app">
+            <div class="semicontainer">
+                <div class="left">
+                    <img src="images/mobileBanner.png" alt="mobileBanner">
+                </div>
+                <div class="right">
+                    <h1>Get The Zomato App</h1>
+                    <p>We will send you a link, open it on your phone to download the app.</p>
+                    <div class="radio__button_container">
+                        <div>
+                            <input type="radio" id="email" name="download_app">
+                            <label for="email" style="font-size: 14px">Email</label>
+                        </div>
+                        <div>
+                            <input type="radio" id="phone" name="download_app">
+                            <label for="phone" style="font-size: 14px">Phone</label>
+                        </div>
+                    </div>
+                    <div class="input_container">
+                        <input type="text" placeholder="Email"/>
+                        <button>Share App Link</button>
+                    </div>
+                    <div class="download__app_container">
+                        <h5>Download App From</h5>
+                        <div>
+                          <img src="images/playStore.png" alt="" />
+                          <img src="images/appleStore.png" alt="" />
+                        </div>
+                      </div>
+                </div>
+            </div>
+        </div>
+    </section>
+    <footer class="footer">
+        <div class="footer_section1">
+            <img src="images/logo.png" alt="Zomato-logo" />
+            <div class="section1__buttonContainer">
+                <button>
+                    <img 
+                    src="https://flagcdn.com/w40/in.png" 
+                    alt="India" 
+                    style="width: 17px"
+                    /> India
+                </button>
+                <button>
+                    <i class="fa fa-globe" aria-hidden="true"></i> English
+                </button>
+            </div>
+        </div>
+        <div class="navigation_container">
+            <div class="link__container">
+                <h5>ABOUT ZOMATO</h5>
+                <a href="#" class="footer__link">Who we are</a>
+                <a href="#" class="footer__link">Blogs</a>
+                <a href="#" class="footer__link">Work with us</a>
+                <a href="#" class="footer__link">Investor Relations</a>
+                <a href="#" class="footer__link">Report Fraud</a>
+            </div>
+
+            <div class="link__container">
+                <h5>ZOMAVERSE</h5>
+                <a href="#" class="footer__link">Zomato</a>
+                <a href="#" class="footer__link">Feeding India</a>
+                <a href="#" class="footer__link">Hyperpuer</a>
+                <a href="#" class="footer__link">Zomaland</a>
+            </div>
+
+            <div class="link__container">
+                <h5>FOR RESTURENT</h5>
+                <a href="#" class="footer__link">Partner with us</a>
+                <a href="#" class="footer__link">App for you</a>
+                <br/>
+                <h5>FOR ENTERPRISES</h5>
+                <a href="#" class="footer__link">Zomato for work</a>
+            </div>
+
+            <div class="link__container">
+                <h5>LERN MORE</h5>
+                <a class="footer__link" href="#">Privacy</a>
+                <a class="footer__link" href="#">Security</a>
+                <a class="footer__link" href="#">Terms</a>
+                <a class="footer__link" href="#">Sitemap</a>
+            </div>
+
+            <div class="link__container">
+                <h5>SOCIAL LINKS</h5>
+                <div class="social__links_container">
+                  <button><i class="fa-brands fa-linkedin-in"></i></button>
+                  <button><i class="fa-brands fa-instagram"></i></button>
+                  <button><i class="fa-brands fa-twitter"></i></button>
+                  <button><i class="fa-brands fa-youtube"></i></button>
+                  <button><i class="fa-brands fa-facebook-f"></i></button>
+                </div>
+                <br />
+                <img src="images/appleStore.png" alt="" class="footer__store_logos" />
+                <img src="images/playStore.png" alt="" class="footer__store_logos" />
+            </div>
+        </div>
+        <p class="disclamer">
+            By continuing past this page, you agree to our Terms of Service, Cookie
+            Policy, Privacy Policy and Content Policies. All trademarks are
+            properties of their respective owners. 2008-2022 © Zomato™ Ltd. All
+            rights reserved.
+          </p>
+    </footer>
 </body>
 </html>
